Fixed navigation bar spacing -GH

--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@ a:visited {
 	color: #fff;
 	letter-spacing: -1px;
 	text-align: center;
-	padding: 28px 0px 30px 14px;
+	padding: 27px 0px 24px 14px;
 	position: relative;
 	vertical-align: middle;
 	font-weight: bold;
